batch download image

--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image List Sidebar</title>
   <link rel="stylesheet" href="sidebar.css">
+  <!-- 引入JSZip库，用于创建zip文件 -->
+  <script src="lib/jszip.min.js"></script>
 </head>
 <body>
   <div class="sidebar-container">
